# FarmLabWebPortal

./: README.md
FarmLabWebPortal-backend/: .gitignore  .gitlint  .pre-commit-config.yaml  Procfile  README.md  compose.yaml  project.toml  pyproject.toml
FarmLabWebPortal-backend/authentication/: apps.py  serializers.py  urls.py  views.py
FarmLabWebPortal-backend/config/: .env.local  asgi.py  urls.py  wsgi.py
FarmLabWebPortal-backend/config/settings/: __init__.py  authentication.py  cache.py  database.py  drf.py  installed_apps.py  locale.py
FarmLabWebPortal-backend/core/: apps.py  mixins.py  serializers.py  validators.py  views.py
FarmLabWebPortal-backend/docs/: INSTALL.md
FarmLabWebPortal-backend/farmlabs/: admin.py  apps.py  constants.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
FarmLabWebPortal-backend/farmlabs/migrations/: 0001_initial.py  0002_initial.py  0003_rename_type_device_device_type_and_more.py  0004_alter_device_options_alter_sector_options_and_more.py  0005_devicetype_alter_device_device_type.py  0006_devicetype_color_alter_device_device_type_and_more.py  0007_farmlab_token.py  0008_alter_farmlab_token.py  0009_cultivationlog.py  0010_alter_cultivationlog_action.py
FarmLabWebPortal-backend/farmlabs/services/: __init__.py  cultivation_logs.py  devices.py
FarmLabWebPortal-backend/farmlabs/tests/: conftest.py  test_device.py  test_farmlab.py  test_threshold.py
FarmLabWebPortal-backend/models/: MLPClassifier_pca.joblib  pca.joblib
FarmLabWebPortal-backend/users/: admin.py  constants.py  factories.py  models.py  serializers.py  urls.py  views.py
FarmLabWebPortal-backend/users/migrations/: 0001_initial.py
FarmLabWebPortal-frontend/: .env.example  README.md  package-lock.json  package.json
FarmLabWebPortal-frontend/docs/: INSTALL.md
FarmLabWebPortal-frontend/public/: index.html
FarmLabWebPortal-frontend/src/: index.js
FarmLabWebPortal-frontend/src/assets/fake data/: data.js
FarmLabWebPortal-frontend/src/components/: Navbar.js
FarmLabWebPortal-frontend/src/libs/: api.js  auth.js
FarmLabWebPortal-frontend/src/screens/: Home.js  Profile.js
FarmLabWebPortal-frontend/src/screens/data_visualization/: DataVisualization.js
FarmLabWebPortal-frontend/src/screens/devices/: DeviceCreateForm.js  DeviceUpdateForm.js
FarmLabWebPortal-frontend/src/screens/farms/: FarmCreateForm.js  FarmDetail.js  FarmUpdateForm.js  FarmsDashboard.js
FarmLabWebPortal-frontend/src/screens/sectors/: SectorCreateForm.js  SectorUpdateForm.js
